Let struct Record have a constructor. This works around a the present failure of gcc mainline to compile this file:   http://gcc.gnu.org/bugzilla/show_bug.cgi?id=18793

git-svn-id: https://svn.dealii.org/trunk@9814 0785d39b-7218-0410-832d-ea1e28bc413d